# cxx_snippets

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
algorithm/: CMakeLists.txt  UnionFind_test.cc  boost_string_test.cc
cmake/: README.md  google_benchmark.cmake  xsimd.cmake
cmake/resolve_dependency_modules/: fizz.cmake  proxygen.cmake  wangle.cmake
cxx17/: CMakeLists.txt  ScopedCleanup.h  function_test.cc  mutex_test.cc  ptr_test.cc  scoped_cleanup_test.cc  set_test.cc  string_benchmark.cc  string_view_test.cc
folly/: CMakeLists.txt  SpookyV2.h  compression_benchmark.cc  compression_test.cc  dynamic_test.cc  future_test.cc  hasher_test.cc  iobuf_test.cc  my_hasher.hpp  my_lz4.cc  my_lz4.h  my_lz4.hpp
java/lz4-demo/: pom.xml
java/lz4-demo/src/test/java/com/icejoywoo/: AirliftLz4Test.java
template/: CMakeLists.txt  function_types_test.cc  pow_constexpr_bench.cc  type_display_test.cc
velox/: CMakeLists.txt  udf_holder.cc  udf_holder.h
velox_/: CMakeLists.txt  SpookyV2.cpp  hasher_benchmark.cc  my_hasher.hpp  presto_hasher.hpp  presto_serializer_test.cc  vector_hasher_test.cc  velox_hasher.hpp  velox_hasher_test.cc  velox_vector_hasher_test.cc  xxhash64.h
